[package]
name = "apricity"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Simple UI library for teaching purposes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
line_drawing = "1.0.0"
rusttype = "0.9.2"
sdl2 = "0.35.2"
serde = { version = "1.0.145", features = ["derive"] }
